plugins {
	id 'java'
	id 'application'
	id 'org.springframework.boot' version '3.5.6'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'es.deusto.sd.client'
version = '1.0'

repositories {
	mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

dependencies {
	// Spring Boot Starter Web for building web applications
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
}


// Spring Boot configuration, defaults to running the web client
bootRun {
    mainClass.set("es.deusto.sd.client.web.WebClientApplication")
}
